--- a/style.css
+++ b/style.css
@@ -33,6 +33,25 @@ div#main button {
   align-self: center;
 }
 
+div#details {
+  display: flex;
+  justify-content: space-between;
+}
+
+div.left, div.right {
+  text-align: center;
+}
+div.left img, div.right iframe{
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
+}
+
+
+div#details div {
+  width: 32%;
+  overflow: hidden;
+}
 
 /* #slider {
   border: 1px solid black;
