--- a/style.css
+++ b/style.css
@@ -92,11 +92,19 @@ div#footer a:first-child {
 div#footer a:last-child {
   margin-right: 200px;
 }
-
+div#map-container {
+  display: flex;
+  justify-content: space-around;
+}
 div#map {
-  width: 500px;
+  width: 300px;
   height: 300px;
-  margin: 40px auto;
+  margin-left: 100px;
+}
+div#pano {
+  width: 300px;
+  height: 300px;
+  margin-right: 100px;
 }
 /* #slider {
   border: 1px solid black;
