Layout set but map is hidden

--- a/style.css
+++ b/style.css
@@ -1,216 +1,16 @@
-* {
-  /* background: green; */
-}
-
-#myCanvas {
-  transition: width .5s, height .5s, top .5s, left .5s;
-}
-
-#myGlobe {
-  transition: width .5s, height .5s, top .5s, left .5s;
-  
-}
-
-div#header {
+body {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
-
-
-
-div#main {
-  width: 400px;
+div#sidebar {
   padding: 20px;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  margin: 0 auto;
-  /* align-items: center; */
-}
-
-div#main button, div#main input {
-  padding: 10px;
-  margin: 10px;
-}
-
-div#main button {
-  width: 100px;
-  align-self: center;
-}
-
-div#details {
-  display: flex;
-  justify-content: space-between;
-}
-
-div.left, div.right {
-  text-align: center;
-}
-div.left img, div.right iframe{
-  max-width: 100%;
-  max-height: 100%;
-  vertical-align: middle;
-}
-
-div.center {
-  padding-left: 20px;
-}
-
-div.center h2 {
-  color: red;
-}
-
-div.center h2.success {
-  color: green;
-}
-
-div.center h2 span.fail.hide {
-  display: none;
-}
-
-
-div#details div {
-  width: 32%;
+  width: 300px;
   overflow: hidden;
 }
-
-i.fa {
-  display: block;
-  padding: 10px;
+div#main {
+  padding: 20px;
+  width: 700px;
+  /* overflow: hidden; */
 }
-
-i.fa span{
-  padding: 0 5px;
-}
-
-div#footer {
-  margin-top: 100px;
+div#chart-video {
   display: flex;
-  justify-content: space-around;
-  flex-direction: row;
 }
-
-div#footer a:first-child {
-  margin-left: 200px;
-}
-div#footer a:last-child {
-  margin-right: 200px;
-}
-div#map-container {
-  display: flex;
-  justify-content: space-around;
-  margin: 100px auto;
-  width: 600px;
-  /* margin: 0 auto; */
-}
-div#map-inner {
-  display: flex;
-  align-content: center;
-}
-div#map {
-  width: 300px;
-  height: 300px;
-  /* margin-left: 100px; */
-}
-div#pano {
-  width: 300px;
-  height: 300px;
-  /* margin-right: 100px; */
-}
-/* #slider {
-  border: 1px solid black;
-} */
-
-
-
-/* http://www.cssportal.com/style-input-range/ */
-/* input[type=range] {
-  height: 26px;
-  -webkit-appearance: none;
-  margin: 10px 0;
-  width: 100%;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 14px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 1px 1px 1px #50555C;
-  background: #50555C;
-  border-radius: 14px;
-  border: 0px solid #000000;
-}
-input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 20px;
-  width: 40px;
-  border-radius: 12px;
-  background: #529DE1;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -3px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #50555C;
-}
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 14px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 1px 1px 1px #50555C;
-  background: #50555C;
-  border-radius: 14px;
-  border: 0px solid #000000;
-}
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 20px;
-  width: 40px;
-  border-radius: 12px;
-  background: #529DE1;
-  cursor: pointer;
-}
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 14px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #50555C;
-  border: 0px solid #000000;
-  border-radius: 28px;
-  box-shadow: 1px 1px 1px #50555C;
-}
-input[type=range]::-ms-fill-upper {
-  background: #50555C;
-  border: 0px solid #000000;
-  border-radius: 28px;
-  box-shadow: 1px 1px 1px #50555C;
-}
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 20px;
-  width: 40px;
-  border-radius: 12px;
-  background: #529DE1;
-  cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #50555C;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #50555C;
-} */
