--- a/style.css
+++ b/style.css
@@ -4,27 +4,31 @@ body {
 div#sidebar {
   padding: 20px;
   width: 300px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 div#main {
   padding: 20px;
   width: 700px;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 div#chart-video {
-  display: flex;
+  /* display: flex; */
 }
 div#map-container {
   display: flex;
   justify-content: space-around;
-  margin: 100 auto;
+  margin: 100px auto;
   width: 600px;
 }
 div#map {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
 }
 div#pano {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
+}
+canvas#myChart {
+  width: 300px;
+  height: 200px;
 }
