--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 body {
   display: flex;
+  font-family: 'Open Sans', sans-serif;
+  
 }
 
 /* SIDEBAR */
-
+.hide {
+  display: none;
+}
+.fail {
+  color: red;
+}
 div#sidebar {
   padding: 20px;
-  width: 300px;
+  width: 320px;
   /* overflow: hidden; */
 }
 img#patch {
@@ -55,6 +62,11 @@ canvas#myChart {
   width: 300px;
   height: 200px;
 }
+div#slider-range {
+  width: 80%;
+  align-self: center;
+  margin-bottom: 15px;
+}
 canvas#myGlobe {
   margin: 0 auto;
   padding: 20px;
@@ -66,6 +78,7 @@ div#map-container {
   display: flex;
   justify-content: space-around;
   margin: 0 auto;
+  padding: 20px;
   width: 600px;
 }
 div#map {
@@ -75,4 +88,14 @@ div#map {
 div#pano {
   width: 300px;
   height: 300px;
+}
+p#disclaimer {
+  font-size: 9px;
+}
+div#main h2{
+  align-self: center;
+}
+span.orbit {
+  margin-top: 10px;
+  align-self: center;
 }
