--- a/style.css
+++ b/style.css
@@ -14,7 +14,16 @@ body {
 div#sidebar {
   padding: 20px;
   width: 320px;
+  /* border-right: 1px solid black; */
+  height: 780px;
+  -webkit-box-shadow: 10px 13px 36px -17px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 13px 36px -17px rgba(0,0,0,0.75);
+  box-shadow: 10px 13px 36px -17px rgba(0,0,0,0.75);
   /* overflow: hidden; */
+}
+div.details {
+  padding: 10px;
+  
 }
 img#patch {
   height: 100px;
@@ -23,6 +32,9 @@ img#patch {
 }
 h2 {
 
+}
+iframe {
+  margin-top: 5px;
 }
 i.fa {
   display: block;
@@ -36,8 +48,19 @@ i.fa-frown-o {
 span.location, span.payload, span.rocket_name{
   padding-left: 7px;
 }
-p.information {
+div.information {
   padding: 20px;
+  max-height: 200px;
+  overflow: scroll;
+}
+p.information {
+  /* padding: 20px; */
+  padding-left: 10px;
+  padding-right: 15px;
+  hyphens: auto;
+  border-left: 2px solid #999;
+  margin-left: 2px;
+  
 }
 
 /* MAIN CONTENT */
@@ -50,10 +73,23 @@ div#main {
   display: flex;
   flex-direction: column;
 }
+/* //https://css-tricks.com/examples/hrs/ */
+div#main > h3:nth-child(2) {
+  padding-top: 10px;
+  font-size: 26px;
+  text-align: center;
+  margin: 5px 0; 
+}
+div.chart {
+  padding: 20px;
+  padding-top: 15px;
+}
 h1 {
   text-align: center;
   font-family: 'Play';
   font-size: 36px;  
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
 }
 input#date {
   text-align: center;
@@ -64,8 +100,10 @@ canvas#myChart {
 }
 div#slider-range {
   width: 80%;
+  margin-top: 10px;
   align-self: center;
   margin-bottom: 15px;
+  background: #d1e0e6;
 }
 canvas#myGlobe {
   margin: 0 auto;
