Add media query to make responsive on phones

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
 }
 
 /* SIDEBAR */
+@media screen and (max-width: 600px) {
+  div#sidebar {
+    display: none;
+  }
+}
 .hide {
   display: none;
 }
