--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   display: flex;
   font-family: 'Open Sans', sans-serif;
-  
+  background: rgba(221, 221, 221,0.5);
+
 }
 
 /* SIDEBAR */
@@ -17,6 +18,7 @@ body {
   color: red;
 }
 div#sidebar {
+  background: #FFFFFF;
   padding: 20px;
   width: 320px;
   /* border-right: 1px solid black; */
@@ -77,6 +79,8 @@ div#main {
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  /* background: rgba(221, 221, 221,0.5); */
+
 }
 /* //https://css-tricks.com/examples/hrs/ */
 div#main > h3:nth-child(2) {
